# Source: uv PyTorch integration docs + Python Packaging User Guide
[project]
name = "distill"
version = "0.1.0"
description = "Generative audio from small personal datasets"
requires-python = ">=3.11,<3.15"
license = "MIT"
dependencies = [
    "torch>=2.10.0,<2.11",
    "torchaudio>=2.10.0,<2.11",
    "tomli-w>=1.1.0",
    "rich>=14.0",
    "psutil>=6.0",
    "soundfile>=0.13.0",
    "numpy>=1.26",
    "matplotlib>=3.9",
    "scipy>=1.12",
    "scikit-learn>=1.8",
    "gradio>=5.0,<7.0",
    "typer>=0.23,<1.0",
    "lameenc>=1.7",
    "mutagen>=1.47",
    "sofar>=1.1",
    "huggingface_hub>=0.20",
    "librosa>=0.10",
]

[project.scripts]
distill = "distill.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/distill"]

# --- uv PyTorch index configuration ---
# macOS: PyPI wheels include MPS support (no special index needed)
# Linux CUDA: Use pytorch-cu128 index
# CPU fallback: PyPI default works
[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]
